Update title page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Globe</title>
+  <title>Sphere</title>
   <style type="text/css">
     .spheres--wrap {
       position: relative;
